# comex-brasil

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
docs/todos/: etl-historical-years.md
etl/: download.py  load.py  pyproject.toml  transform.py
etl/cypher/: queries.cypher  schema.cypher
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/cypher/: route.ts
web/src/app/api/dashboard/: route.ts
web/src/app/api/partners/: route.ts
web/src/app/api/sankey/: route.ts
web/src/components/: App.tsx  CountryList.tsx  CypherView.tsx  DetailPanel.tsx  Globe.tsx  KPIs.tsx  MultiPicker.tsx  ProductView.tsx  SankeyView.tsx  TopBar.tsx  TweaksPanel.tsx  primitives.tsx  types.ts
web/src/lib/: categories.ts  country-coords.ts  format.ts  land.ts  neo4j.ts  regions.ts
