[project]
name = "comex-graph-etl"
version = "0.1.0"
description = "ETL: Comex Stat CSV -> DuckDB -> Neo4j"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.1",
    "neo4j>=5.24",
    "typer>=0.12",
    "rich>=13.9",
    "certifi>=2026.4.22",
    "truststore>=0.10.4",
]

[tool.uv]
package = false
